# mc-option-pricing

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
scripts/: benchmark.py  e2e_smoke.py  run_demo.py
src/mc_pricer/: __init__.py  __main__.py  bs_closed_form.py  cli.py  demo.py  greeks.py  paths.py  pricer.py  products.py
tests/: test_asian_option.py  test_closed_form.py  test_mc_greeks.py  test_mc_price.py  test_variance_reduction_and_greeks.py
