[project]
name = "mc-option-pricing"
version = "0.1.0"
description = "Monte Carlo option pricing under Black-Scholes with Greeks and variance reduction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
  "black>=24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: long-running tests (Monte Carlo stability)"
]