[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mc-option-pricing"
version = "0.2.0"
description = "Monte Carlo option pricing under Black-Scholes with Greeks and variance reduction."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Martin Weiss" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "black>=24.0",
]

[project.scripts]
mc-pricer = "mc_pricer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: long-running tests (Monte Carlo stability)"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]